dont know chnages that need to be made for text to move right in more. Curious to see how this works out

--- a/workspace.jsonc
+++ b/workspace.jsonc
@@ -38,9 +38,12 @@
      */
     "packageManager": "teambit.dependencies/pnpm",
     "policy": {
-      "dependencies": {},
+      "dependencies": {
+        "styled-components": "5.3.6"
+      },
       "peerDependencies": {}
-    }
+    },
+    "linkCoreAspects": true
   },
   /**
    * workspace variants allow to set different subsets of configuration for components in your
